@@ -329,6 +329,8 @@ AC_CHECK_TYPE([sig_atomic_t],,[dnl
 AC_CHECK_FUNCS_ONCE([
   fchmod
   getcwd
+  getpwuid
+  getuid
   getwd
   readlink
 ])
